--- a/cars.html
+++ b/cars.html
@@ -42,23 +42,23 @@
             <div>
                 <p>There are five types of race in Forza Horizon 5: <span style="font-family: AmsiBold;">road racing, street racing, PR stunts, dirt racing and cross country racing</span>. Each type of race is suited to a certain kind of car, so having a range of vehicles in your collection will help you rack up the victories.</p>
                 <div>
-                    <div class="flex-container">
-                        <div class="flex-item1 center racetypes" style="overflow: hidden;">
-                            <a href="cars/roadracing.html"><img src="images/apex.png" class="image" width="300vw"></a>
+                    <div class="flex-container" style="margin-bottom: 2vw;">
+                        <div class="flex-item1 center racetypes">
+                            <a href="cars/roadracing.html"><img src="images/apex.png" class="image center" width="300vw"></a>
                         </div>
-                        <div class="flex-item1 center racetypes" style="overflow: hidden;">
+                        <div class="flex-item1 center racetypes">
                             <a href="cars/crosscountryracing.html"><img src="images/baja.png" class="image" width="300vw"></a>
                         </div>
-                        <div class="flex-item1 center racetypes" style="overflow: hidden;">
+                        <div class="flex-item1 center racetypes">
                             <a href="cars/prstunts.html"><img src="images/rush.png" class="image" width="300vw"></a>
                         </div>
                     </div>
                     <div class="flex-container">
                         <div class="flex-item1"></div>
-                        <div class="flex-item2 center racetypes" style="overflow: hidden;">
+                        <div class="flex-item2 center racetypes">
                             <a href="cars/dirtracing.html"><img src="images/wilds.png" class="image" width="300vw"></a>
                         </div>
-                        <div class="flex-item2 center racetypes" style="overflow: hidden;">
+                        <div class="flex-item2 center racetypes">
                             <a href="cars/streetracing.html"><img src="images/streetscene.png" class="image" width="300vw"></a>
                         </div>
                         <div class="flex-item1"></div>
