--- a/cars/crosscountryracing.html
+++ b/cars/crosscountryracing.html
@@ -40,13 +40,13 @@
             <ol reversed>
                 <li class="carlist">
                     <div>
-                        <h1 class="centere" style="line-height: 1; margin-bottom: 1.5vw;">BMW X5 M FE</h1>
+                        <h1 class="centere" style="line-height: 1; margin-bottom: 40px;">BMW X5 M FE</h1>
                         <div class="flex-container" >
                             <div class="flex-item1" style="margin: auto 1vw;">
                                 <img class="centere" src="/images/cars/crosscountryracing/5.png" width="100%">
                             </div>
                             <div class="flex-item2" style="margin: auto 1vw;">
-                                <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 1.5vw;" class="center">Gifted as part of a promotion or content pack</h2>
+                                <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 30px;" class="center">Gifted as part of a promotion or content pack</h2>
                                 <table width="100%">
                                     <tr>
                                         <th>
@@ -95,6 +95,7 @@
                         </h4>
                     </div>
                 </li>
+                <div class="paragraph-trenner"></div>
                 <li class="carlist">
                     <div>
                         <h1 class="centere" style="line-height: 1; margin-bottom: 1.5vw;">AMG Transport Dynamics M12S Warthog CST</h1>
@@ -103,7 +104,7 @@
                                 <img class="centere" src="/images/cars/crosscountryracing/4.png" width="100%">
                             </div>
                             <div class="flex-item2" style="margin: auto 1vw;">
-                                <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 1.5vw;" class="center">850,000 CR</h2>
+                                <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 30px;" class="center">850,000 CR</h2>
                                 <table width="100%">
                                     <tr>
                                         <th>
@@ -152,6 +153,7 @@
                         </h4>
                     </div>
                 </li>
+                <div class="paragraph-trenner"></div>
                 <li class="carlist">
                     <div>
                         <h1 class="centere" style="line-height: 1; margin-bottom: 1.5vw;">1986 Hoonigan Ford RS200 Evolution</h1>
@@ -160,7 +162,7 @@
                                 <img class="centere" src="/images/cars/crosscountryracing/3.png" width="100%">
                             </div>
                             <div class="flex-item2" style="margin: auto 1vw;">
-                                <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 1.5vw;" class="center">500,000 CR</h2>
+                                <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 30px;" class="center">500,000 CR</h2>
                                 <table width="100%">
                                     <tr>
                                         <th>
@@ -208,9 +210,10 @@
                         <h4>Cars bearing the Hoonigan brand have become a go-to for the chaotic driving of off-roading, multiplayer skirmishes, and cross-country romps. But there are few better options than the '86 RS200, which stands as a recreation of pro rally driver Ken Block.</h4>
                     </div>
                 </li>
+                <div class="paragraph-trenner"></div>
                 <li class="carlist">
                     <div>
-                        <h1 class="centere" style="line-height: 1; margin-bottom: 1.5vw;">Mercedes-Benz X-Class</h1>
+                        <h1 class="centere" style="line-height: 1; margin-bottom: 30px;">Mercedes-Benz X-Class</h1>
                         <div class="flex-container" >
                             <div class="flex-item1" style="margin: auto 1vw;">
                                 <img class="centere" src="/images/cars/crosscountryracing/2.png" width="100%">
@@ -264,6 +267,7 @@
                         <h4>Not only does it score an excellent 7.8 in offroad capabilities, but its speed and launch are both respectable as well, with a 4.4 rating on both fronts (D 368). This beast can get moving quickly and efficiently while powering through bumpy terrain. Get it at the Autoshow for 65,000 CR.</h4>
                     </div>
                 </li>
+                <div class="paragraph-trenner"></div>
                 <li class="carlist">
                     <div>
                         <h1 class="centere" style="line-height: 1; margin-bottom: 1.5vw;">Ford 25 "Brocky" Ultra4 Bronco</h1>
@@ -272,7 +276,7 @@
                                 <img class="centere" src="/images/cars/crosscountryracing/1.png" width="100%">
                             </div>
                             <div class="flex-item2" style="margin: auto 1vw;">
-                                <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 1.5vw;" class="center">500,000 CR</h2>
+                                <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 30px;" class="center">500,000 CR</h2>
                                 <table width="100%">
                                     <tr>
                                         <th>
@@ -321,6 +325,8 @@
                     </div>
                 </li>
             </ol>
+            <div class="paragraph-trenner"></div>
+            <a href="/cars.html" class="center default link"><h3>&#129080;Go Back</h3></a>
 
         </article>
         <footer>
