--- a/cars/crosscountryracing.html
+++ b/cars/crosscountryracing.html
@@ -159,7 +159,7 @@
                         <h1 class="centere" style="line-height: 1; margin-bottom: 1.5vw;">1986 Hoonigan Ford RS200 Evolution</h1>
                         <div class="flex-container" >
                             <div class="flex-item1" style="margin: auto 1vw;">
-                                <img class="centere" src="/images/cars/crosscountryracing/3.png" width="100%">
+                                <img class="centere fade-in" src="/images/cars/crosscountryracing/3.png" width="100%">
                             </div>
                             <div class="flex-item2" style="margin: auto 1vw;">
                                 <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 30px;" class="center">500,000 CR</h2>
