--- a/cars/crosscountryracing.html
+++ b/cars/crosscountryracing.html
@@ -91,8 +91,7 @@
                                 </table>
                             </div>
                         </div>
-                        <h4>With a 4.4L twin-turbocharged V8 and 547 bhp, along with large front brakes, this performance SUV is tailor-made for wild rides wrought with jumps and rough terrain. This is topped off with swift speed and ample grip for smooth handling around those corners.
-                        </h4>
+                        <h4>With a 547bhp twin-turbocharged 4.4-litre V8 engine and large front brakes, this performance off-roader is made for wild riding with ramps and rough terrain. Add to that high speed and enough grip for smooth cornering. Some say that this is the best car for cross-country racing.</h4>
                     </div>
                 </li>
                 <div class="paragraph-trenner"></div>
