--- a/news.html
+++ b/news.html
@@ -39,11 +39,11 @@
                 <h1>Forza Horizon 5 Series 6 Update</h1>
                 <h2>Horizon Customs</h2>
                 <div class="paragraph-trenner"></div>
-                <p>Horizon Customs. The focus for Forza Horizon 5 Series 6 is "Horizon Customs," which celebrates all of the various ways players can contribute to FH5 with their own creations, including car tunes and designs, EventLab Blueprints, and photographers. Some of the changes coming with this Festival Playlist include:</p>
+                <p>Horizon Customs. The focus of the sixth Forza Horizon 5 series is 'Horizon Customs', which celebrates all the various ways players can contribute to FH5 by creating their own creations, including songs and vehicle designs, EventLab Blueprints and photographers. Some of the changes that have come with this playlist festival include:</p>
                 <div class="flex-container">
                     <div class="flex-item3">
                         <ul>
-                            <li>New collectible paint barrels and miniature t-rex dinosaurs scattered all over the world</li>
+                            <li style="font-size: 24px;">New collectible paint barrels and miniature t-rex dinosaurs scattered all over the world</li>
                             <li>Two EventLab Events featured every week</li>
                             <li>One Seasonal Championship featuring a custom photo taken by a community member</li>
                             <li>Seasonal PR Stunts will now provide Super Wheelspins instead of regular Wheelspins</li>
