--- a/cars.html
+++ b/cars.html
@@ -36,7 +36,7 @@
         <article>
             <div>
                 <div class="paragraph-trenner"></div>
-                <h1 class="center">Race Types</h1>
+                <h1 class="center" style="font-size: 4em;">Race Types</h1>
                 <div class="paragraph-trenner"></div>
             </div>
             <div>
@@ -44,7 +44,7 @@
                 <div>
                     <div class="flex-container" style="margin-bottom: 2vw;">
                         <div class="flex-item1 center racetypes">
-                            <a href="cars/roadracing.html"><img src="images/apex.png" class="image center" width="300vw"></a>
+                            <a href="cars/roadracing.html"><img src="images/apex.png" class="image" width="300vw"></a>
                         </div>
                         <div class="flex-item1 center racetypes">
                             <a href="cars/crosscountryracing.html"><img src="images/baja.png" class="image" width="300vw"></a>
@@ -52,16 +52,12 @@
                         <div class="flex-item1 center racetypes">
                             <a href="cars/prstunts.html"><img src="images/rush.png" class="image" width="300vw"></a>
                         </div>
-                    </div>
-                    <div class="flex-container">
-                        <div class="flex-item1"></div>
-                        <div class="flex-item2 center racetypes">
+                        <div class="flex-item1 center racetypes">
                             <a href="cars/dirtracing.html"><img src="images/wilds.png" class="image" width="300vw"></a>
                         </div>
-                        <div class="flex-item2 center racetypes">
+                        <div class="flex-item1 center racetypes">
                             <a href="cars/streetracing.html"><img src="images/streetscene.png" class="image" width="300vw"></a>
                         </div>
-                        <div class="flex-item1"></div>
                     </div>
                 </div>
                 <div class="paragraph-trenner"></div>
