--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         world’s greatest cars. Begin Your Horizon
                         Adventure today and add to your Wishlist!</p>
                 </div>
-                <div class="flex-item2" style="overflow: hidden;">
-                    <img class="center" style="height: 100%;; text-align: center; max-height: 500px; max-width: 500px; border-radius: 5px;" src="./images/cover.jpg" alt="Game Cover">
+                <div class="flex-item2">
+                    <img class="center" style="width:200em; text-align: center; max-height: 500px; max-width: 500px; border-radius: 5px;" src="./images/cover.jpg" alt="Game Cover">
                 </div>
             </div>
             <div>
