--- a/cars/crosscountryracing.html
+++ b/cars/crosscountryracing.html
@@ -113,19 +113,19 @@
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Speed<br>4.2</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 42%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 42%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Handling<br>4.1</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 41%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 41%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Acceleration<br>8.6</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 86%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 86%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                     </tr>
@@ -133,19 +133,19 @@
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Launch<br>10.0</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 100%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 100%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Braking<br>6.7</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 67%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 67%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Offroad<br>10</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 100%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 100%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                     </tr>
@@ -171,19 +171,19 @@
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Speed<br>7.6</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 76%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 76%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Handling<br>6.5</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 65%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 65%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Acceleration<br>9.5</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 95%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 95%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                     </tr>
@@ -191,19 +191,19 @@
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Launch<br>5.1</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 52%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center  ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 52%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Braking<br>5.3</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 53%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center  ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 53%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
-                                                <h3 class="center" style="margin: 0; line-height:1.5em;">Offroad 8.3</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 83%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <h3 class="center" style="margin: 0; line-height:1.5em;">Offroad<br>8.3</h3>
+                                                <div class="center  ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 83%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                     </tr>
@@ -228,19 +228,19 @@
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Speed<br>4.2</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 42%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center  ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 42%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Handling<br>3.2</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 32%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center  ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 32%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Acceleration<br>2.4</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 24%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center  ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 24%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                     </tr>
@@ -248,19 +248,19 @@
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Launch<br>4.2</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 42%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center  ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 42%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Braking<br>2.8</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 28%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 28%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Offroad<br>7.8</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 78%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 78%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                     </tr>
@@ -285,19 +285,19 @@
                                         <th>
                                             <div style="margin:0.5vw;">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Speed<br>4.7</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 47%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 47%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Handling<br>4.1</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 42%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 42%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Acceleration<br>6.1</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 61%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 61%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                     </tr>
@@ -305,19 +305,19 @@
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Launch<br>5.2</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 52%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 52%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Braking<br>5.2</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 52%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 52%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                         <th>
                                             <div style="margin:0.5vw">
                                                 <h3 class="center" style="margin: 0; line-height:1.5em;">Offroad<br>10.0</h3>
-                                                <div class="center" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 100%,rgba(0, 0, 0, 0.5) 0%);"></div>        
+                                                <div class="center ani" style="width: 10vw; height: 0.5vw; background-image: linear-gradient(to right, #FF09E0, #FF7D00 100%,rgba(0, 0, 0, 0.5) 0%);"></div>        
                                             </div>
                                         </th>
                                     </tr>
