--- a/cars/crosscountryracing.html
+++ b/cars/crosscountryracing.html
@@ -34,7 +34,7 @@
             <div class="colorramp"></div>
         </header>
         <article>
-            <h1 class="center" style="font-size: 4em;">Race Types</h1>
+            <h1 class="center" style="font-size: 4em;">Top 5 cars for cross-country racing</h1>
             <div class="paragraph-trenner"></div>
 
             <ol reversed>
