--- a/vorlage.html
+++ b/vorlage.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/styles.css">
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="/images/icon.png">
+        <?php include 'footer.php';?>
     </head>
     <body>
         <header>
@@ -42,7 +43,6 @@
             <h4>H4 Text</h4>
             <h5>H5 Text</h5>
             <h6>H6 Text</h6>
-            <a>Test</a>
         </article>
         <footer>
             <div class="colorramp"></div>
@@ -77,4 +77,5 @@
         </footer>
     </body>
     <script src="/script.js"></script>
+    
 </html>
