--- a/map.html
+++ b/map.html
@@ -34,7 +34,9 @@
             <div class="colorramp"></div>
         </header>
         <article>
-            <h1 class="center">Coming soon</h1>
+            <h1 class="center">Map</h1>
+            <div class="paragraph-trenner"></div>
+            <p>Forza Horizon 5 is one of Microsoft’s premiere games this fall and the series is known for the mountains and mountains of open-world racing fun it offers. Ahead of launch, the map of Mexico has been unveiled and the Forza Horizon 5 map is about 50% larger than England, which was the setting of Forza Horizon 4. </p>
         </article>
         <footer>
             <div class="colorramp"></div>
@@ -69,4 +71,5 @@
         </footer>
     </body>
     <script src="/script.js"></script>
+    
 </html>
