--- a/vorlage.html
+++ b/vorlage.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <div id="mobile-nav" onclick="off()">
-            <a href="/index.html" class="LogoClick center">Home</a>
-            <a href="/news.html" class="LogoClick center">News</a>
-            <a href="/cars.html" class="LogoClick center">Cars</a>
-            <a href="/map.html" class="LogoClick center">Map</a>
-            <a href="/tuning.html" class="LogoClick center">Tuning</a>
-            <a href="/tips.html" class="LogoClick center">Tips</a>
-            <a href="/aboutme.html" class="LogoClick center">About Me</a>
+            <a href="/index.html" class="LogoClick center mobilea">Home</a>
+            <a href="/news.html" class="LogoClick center mobilea">News</a>
+            <a href="/cars.html" class="LogoClick center mobilea">Cars</a>
+            <a href="/map.html" class="LogoClick center mobilea">Map</a>
+            <a href="/tuning.html" class="LogoClick center mobilea">Tuning</a>
+            <a href="/tips.html" class="LogoClick center mobilea">Tips</a>
+            <a href="/aboutme.html" class="LogoClick center mobilea">About Me</a>
         </div>
         <header>
             <div class="colorramp"></div>
