--- a/vorlage.html
+++ b/vorlage.html
@@ -19,9 +19,7 @@
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
-                    <div>
-                        <img src="/images/menu-icon.png" class="mobilemenu" alt="Start" onclick="on()">
-                    </div>
+                    <input type="image" src="/images/menu-icon.png" class="mobilemenu" onclick="on()">
                     <nav class="center">
                         <a href="/index.html" class="LogoClick">
                             <img src="/images/Logo2.png" class="Logo center" alt="Start">
