--- a/vorlage.html
+++ b/vorlage.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" type="image/png" href="/images/icon.png">
     </head>
     <body>
-        <div id="mobile-nav">
+        <div id="mobile-nav" onclick="off()">
             <a href="/index.html" class="LogoClick center mobilea">Home</a>
             <a href="/news.html" class="LogoClick center mobilea">News</a>
             <a href="/cars.html" class="LogoClick center mobilea">Cars</a>
@@ -19,7 +19,9 @@
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
-                    <input type="image" src="/images/menu-icon.png" class="mobilemenu" onclick="on()">
+                    <div>
+                        <img src="/images/menu-icon.png" class="mobilemenu" alt="Start" onclick="on()">
+                    </div>
                     <nav class="center">
                         <a href="/index.html" class="LogoClick">
                             <img src="/images/Logo2.png" class="Logo center" alt="Start">
