--- a/vorlage.html
+++ b/vorlage.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" type="image/png" href="/images/icon.png">
     </head>
     <body>
-        <div id="mobile-nav" onclick="off()">
+        <div id="mobile-nav">
             <a href="/index.html" class="LogoClick center mobilea">Home</a>
             <a href="/news.html" class="LogoClick center mobilea">News</a>
             <a href="/cars.html" class="LogoClick center mobilea">Cars</a>
@@ -20,7 +20,7 @@
             <div class="colorramp"></div>
                 <div class="header-navigation">
                     <div>
-                        <img src="/images/menu-icon.png" class="mobilemenu" alt="Start" onclick="on()">
+                        <img src="/images/menu-icon.png" class="mobilemenu" alt="Start" onclick="OnStart()">
                     </div>
                     <nav class="center">
                         <a href="/index.html" class="LogoClick">
