--- a/vorlage.html
+++ b/vorlage.html
@@ -20,7 +20,7 @@
             <div class="colorramp"></div>
                 <div class="header-navigation">
                     <div>
-                        <img src="/images/menu-icon.png" class="mobilemenu" alt="Start" onclick="OnStart()">
+                        <img src="/images/menu-icon.png" class="mobilemenu" id="btnon" alt="Start">
                     </div>
                     <nav class="center">
                         <a href="/index.html" class="LogoClick">
