--- a/vorlage.html
+++ b/vorlage.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" type="image/png" href="/images/icon.png">
     </head>
     <body>
-        <div class="mobile-nav">
+        <div id="mobile-nav">
             <a href="/index.html" class="LogoClick center mobilea">Home</a>
             <a href="/news.html" class="LogoClick center mobilea">News</a>
             <a href="/cars.html" class="LogoClick center mobilea">Cars</a>
