--- a/cars.html
+++ b/cars.html
@@ -7,28 +7,41 @@
         <link rel="shortcut icon" type="image/png" href="./images/icon.png">
     </head>
     <body>
+        <div id="mobile-nav">
+            <img src="/images/menu-icon.png" class="mobilemenu" id="btnoff" alt="Start">
+            <a href="/index.html" class="LogoClick center mobilea">Home</a>
+            <a href="/news.html" class="LogoClick center mobilea">News</a>
+            <a href="/cars.html" class="LogoClick center mobilea">Cars</a>
+            <a href="/map.html" class="LogoClick center mobilea">Map</a>
+            <a href="/tuning.html" class="LogoClick center mobilea">Tuning</a>
+            <a href="/tips.html" class="LogoClick center mobilea">Tips</a>
+            <a href="/aboutme.html" class="LogoClick center mobilea">About Me</a>
+        </div>
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
-                    <nav>
-                        <a href="index.html" class="LogoClick">
-                            <img src="./images/Logo2.png" class="Logo" alt="Start">
+                    <div>
+                        <img src="/images/menu-icon.png" class="mobilemenu" id="btnon" alt="Start">
+                    </div>
+                    <nav class="center">
+                        <a href="/index.html" class="LogoClick">
+                            <img src="/images/Logo2.png" class="Logo center" alt="Start">
                         </a>
-                        <a href="news.html">News</a>
+                        <a href="/news.html">News</a>
                         <div class="dropdown">
-                            <a class="dropbtn" href="cars.html">Cars</a>
+                            <a class="dropbtn" href="/cars.html">Cars</a>
                             <div class="dropdown-content">
-                                <a href="cars/roadracing.html">Road Racing</a>
-                                <a href="cars/dirtracing.html">Dirt Racing</a>
-                                <a href="cars/crosscountryracing.html">Cross Country Racing</a>
-                                <a href="cars/prstunts.html">PR Stunts</a>
-                                <a href="cars/streetracing.html">Street Racing</a>
+                                <a href="/cars/roadracing.html">Road Racing</a>
+                                <a href="/cars/dirtracing.html">Dirt Racing</a>
+                                <a href="/cars/crosscountryracing.html">Cross Country Racing</a>
+                                <a href="/cars/prstunts.html">PR Stunts</a>
+                                <a href="/cars/streetracing.html">Street Racing</a>
                             </div>
-                          </div>
-                        <a href="map.html">Map</a>
-                        <a href="tuning.html">Tuning</a>
-                        <a href="tips.html">Tips</a>
-                        <a href="aboutme.html">About-Me</a>
+                        </div>
+                        <a href="/map.html">Map</a>
+                        <a href="/tuning.html">Tuning</a>
+                        <a href="/tips.html">Tips</a>
+                        <a href="/aboutme.html">About-Me</a>
                     </nav>
                 </div>
             <div class="colorramp"></div>
