--- a/news.html
+++ b/news.html
@@ -7,12 +7,25 @@
         <link rel="shortcut icon" type="image/png" href="/images/icon.png">
     </head>
     <body>
+        <div id="mobile-nav">
+            <img src="/images/menu-icon.png" class="mobilemenu" id="btnoff" alt="Start">
+            <a href="/index.html" class="LogoClick center mobilea">Home</a>
+            <a href="/news.html" class="LogoClick center mobilea">News</a>
+            <a href="/cars.html" class="LogoClick center mobilea">Cars</a>
+            <a href="/map.html" class="LogoClick center mobilea">Map</a>
+            <a href="/tuning.html" class="LogoClick center mobilea">Tuning</a>
+            <a href="/tips.html" class="LogoClick center mobilea">Tips</a>
+            <a href="/aboutme.html" class="LogoClick center mobilea">About Me</a>
+        </div>
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
-                    <nav>
+                    <div>
+                        <img src="/images/menu-icon.png" class="mobilemenu" id="btnon" alt="Start">
+                    </div>
+                    <nav class="center">
                         <a href="/index.html" class="LogoClick">
-                            <img src="/images/Logo2.png" class="Logo" alt="Start">
+                            <img src="/images/Logo2.png" class="Logo center" alt="Start">
                         </a>
                         <a href="/news.html">News</a>
                         <div class="dropdown">
@@ -41,13 +54,13 @@
                 <div class="paragraph-trenner"></div>
                 <p>Horizon Customs. The focus of the sixth Forza Horizon 5 series is 'Horizon Customs', which celebrates all the various ways players can contribute to FH5 by creating their own creations, including songs and vehicle designs, EventLab Blueprints and photographers. Some of the changes that have come with this playlist festival include:</p>
                 <div class="flex-container">
-                    <div class="flex-item3">
+                    <div class="flex-item3" style="text-align: left;">
                         <ul>
-                            <li style="font-size: 24px;">New collectible paint barrels and miniature t-rex dinosaurs scattered all over the world</li>
-                            <li>Two EventLab Events featured every week</li>
-                            <li>One Seasonal Championship featuring a custom photo taken by a community member</li>
-                            <li>Seasonal PR Stunts will now provide Super Wheelspins instead of regular Wheelspins</li>
-                            <li>Tons of new cosmetics and cars</li>
+                            <li><h4 style="margin: 1em;">New collectible paint barrels and miniature t-rex dinosaurs scattered all over the world</h4></li>
+                            <li><h4 style="margin: 1em;">Two EventLab Events featured every week</h4></li>
+                            <li><h4 style="margin: 1em;">One Seasonal Championship featuring a custom photo taken by a community member</h4></li>
+                            <li><h4 style="margin: 1em;">Seasonal PR Stunts will now provide Super Wheelspins instead of regular Wheelspins</h4></li>
+                            <li><h4 style="margin: 1em;">Tons of new cosmetics and cars</h4></li>
                         </ul>
                     </div>
                     <div class="flex-item2" style="padding: 2.5%;">
