--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Vorlage: Forza Horizon 5</title>
+        <title>About Me</title>
         <link rel="stylesheet" href="/styles.css">
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="/images/icon.png">
@@ -47,12 +47,12 @@
             <div class="colorramp"></div>
         </header>
         <article>
+            <div class="paragraph-trenner"></div>
             <h1 class="center">About me</h1>
             <div class="paragraph-trenner"></div>
             <div class="flex-container">
                 <div class="flex-item4">
-                    <p style="font-size: 35px;">"Video games have entertained me since my childhood. With my website"Forza Horizion 5 Guide" I share my passion the game with other people. I Always play video games with friends or sometimes alone, no matter what platform, game or genre."</p>
-                    <p>-Joel</p>
+                    <p style="font-size: 30px;">"Video games have entertained me since my childhood. With my website"Forza Horizion 5 Guide" I share my passion the game with other people. I Always play video games with friends or sometimes alone, no matter what platform, game or genre."<br><br>-Joel Erni</p>
                 </div>
                 <div class="flex-item3">
                     <img class="center" src="/images/aboutme.png" width="350px">
@@ -64,7 +64,7 @@
                 <h1 class="centere" style="line-height: 1; margin-bottom: 40px;">Honda NSX-R '92</h1>
                 <div class="flex-container" >
                     <div class="flex-item1" style="margin: auto 1vw;">
-                        <img class="centere" src="/images/aboutme1.jpg" width="100%">
+                        <img class="center" src="/images/aboutme1.jpg" width="400px">
                     </div>
                     <div class="flex-item2" style="margin: auto 1vw;">
                         <h2 style="margin-bottom: -0.25vw; margin-top: -2vw; font-size: 30px;" class="center">90,000 CR</h2>
