--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Vorlage: Forza Horizon 5</title>
+        <title>Map</title>
         <link rel="stylesheet" href="/styles.css">
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="/images/icon.png">
@@ -47,9 +47,31 @@
             <div class="colorramp"></div>
         </header>
         <article>
+            <div class="paragraph-trenner"></div>
             <h1 class="center">Map</h1>
             <div class="paragraph-trenner"></div>
             <p>Forza Horizon 5 is one of Microsoft’s premiere games this fall and the series is known for the mountains and mountains of open-world racing fun it offers. Ahead of launch, the map of Mexico has been unveiled and the Forza Horizon 5 map is about 50% larger than England, which was the setting of Forza Horizon 4. </p>
+            <P>Forza Horizon 4 was practically perfect, but Playground considered community feedback and took extra development time to improve upon Forza Horizon 5's predecessor in practically every way. Forza Horizon 5 features the largest and most diverse world yet, more customization and accessibility for cars and players, and so much more.</P>
+            <a href="https://mapgenie.io/forza-horizon-5/maps/mexico" style="text-decoration: none;" target="_blank">
+                <div class="center downloadbtn">
+                    <h2>interactive map here</h2>
+                    <h4 style="margin-top: 0; margin-bottom:1em;">https://mapgenie.io/forza-horizon-5/maps/mexico</h4>
+                </div>
+            </a>
+            <div class="paragraph-trenner"></div>
+            <img src="/images/map4k.jpg" style="width: 80em; margin: 2em" class="center" alt="High Resolution Map 1">
+            <a href="/images/map4k.jpg" download="ForzaHorizon5Map1HighRes" class="download">
+                <div class="center downloadbtn">
+                    <h2>Download Map<br>8214 x 4651</h2>
+                </div>
+            </a>
+            <div class="paragraph-trenner"></div>
+            <img src="/images/map.jpg" style="width: 80em; margin: 2em" class="center" alt="High Resolution Map 2">
+            <a href="/images/map.jpg" download="ForzaHorizon5Map2HighRes" class="download">
+                <div class="center downloadbtn">
+                    <h2>Download Map<br>3840 x 2160</h2>
+                </div>
+            </a>
         </article>
         <footer>
             <div class="colorramp"></div>
