--- a/tuning.html
+++ b/tuning.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Vorlage: Forza Horizon 5</title>
+        <title>Tuning</title>
         <link rel="stylesheet" href="/styles.css">
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="/images/icon.png">
