--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
         </header>
         <article>
             <div class="wrap flex-container">
-                <div class="flex-item3">
+                <div class="flex-item5 coverflex">
                     <div>
                         <h1>Forza Horizon 5</h1>
                     </div>
-                    <p style="padding-right: 10%;">Your Ultimate Horizon Adventure awaits!
+                    <p style="padding-right: 10%; font-size: 1em;">Your Ultimate Horizon Adventure awaits!
                         Explore the vibrant and ever-evolving open
                         world landscapes of Mexico with limitless,
                         fun driving action in hundreds of the
                         world’s greatest cars. Begin Your Horizon
                         Adventure today and add to your Wishlist!</p>
                 </div>
-                <div class="flex-item2">
-                    <img class="center" style="width:200em; text-align: center; max-height: 500px; max-width: 500px; border-radius: 5px;" src="./images/cover.jpg" alt="Game Cover">
+                <div class="flex-item2 coverflex">
+                    <img class="center" src="./images/cover2.jpg" width="500em" alt="Game Cover" style="padding: 0.5emem; padding-top: 3em;">
                 </div>
             </div>
             <div>
