--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,7 @@
                     <p style="font-size: 30px;">"Video games have entertained me since my childhood. With my website"Forza Horizion 5 Guide" I share my passion the game with other people. I Always play video games with friends or sometimes alone, no matter what platform, game or genre."<br><br>-Joel Erni</p>
                 </div>
                 <div class="flex-item3">
-                    <img class="center" src="/images/aboutme.png" width="350px">
+                    <img class="center" src="/images/aboutme.png" width="350px" alt="Image of myself">
                 </div>
             </div>
             <div class="paragraph-trenner"></div>
