--- a/cars.html
+++ b/cars.html
@@ -57,19 +57,19 @@
                 <div>
                     <div class="flex-container" style="margin-bottom: 2vw;">
                         <div class="flex-item1 center racetypes">
-                            <a href="cars/roadracing.html"><img src="images/apex.png" class="image" width="300vw"></a>
+                            <a href="cars/roadracing.html"><img alt="roadracing category" src="images/apex.png" class="image" width="300vw"></a>
                         </div>
                         <div class="flex-item1 center racetypes">
-                            <a href="cars/crosscountryracing.html"><img src="images/baja.png" class="image" width="300vw"></a>
+                            <a href="cars/crosscountryracing.html"><img alt="Crosscountryracing category" src="images/baja.png" class="image" width="300vw"></a>
                         </div>
                         <div class="flex-item1 center racetypes">
-                            <a href="cars/prstunts.html"><img src="images/rush.png" class="image" width="300vw"></a>
+                            <a href="cars/prstunts.html"><img alt="prstunt category" src="images/rush.png" class="image" width="300vw"></a>
                         </div>
                         <div class="flex-item1 center racetypes">
-                            <a href="cars/dirtracing.html"><img src="images/wilds.png" class="image" width="300vw"></a>
+                            <a href="cars/dirtracing.html"><img alt="dirtracing category" src="images/wilds.png" class="image" width="300vw"></a>
                         </div>
                         <div class="flex-item1 center racetypes">
-                            <a href="cars/streetracing.html"><img src="images/streetscene.png" class="image" width="300vw"></a>
+                            <a href="cars/streetracing.html"><img alt="streetracing category" src="images/streetscene.png" class="image" width="300vw"></a>
                         </div>
                     </div>
                 </div>
