--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         Adventure today and add to your Wishlist!</p>
                 </div>
                 <div class="flex-item2 coverflex">
-                    <img class="center" src="./images/cover2.jpg" width="500em" alt="Game Cover" style="padding: 0.5emem; padding-top: 3em;">
+                    <img class="center" src="./images/cover2.jpg" width="500em" alt="Forza Horizon 5 Game Cover" style="padding: 0.5emem; padding-top: 3em;">
                 </div>
             </div>
             <div>
