--- a/news.html
+++ b/news.html
@@ -104,4 +104,9 @@
         </footer>
     </body>
     <script src="/script.js"></script>
+    <style>
+        li::marker{
+            font-size: 1.5em;
+        }
+    </style>
 </html>
