--- a/cars/crosscountryracing.html
+++ b/cars/crosscountryracing.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>redirect...</title>
-        <meta http-equiv="refresh" content="0; URL=/cars/crosscountryracing.php" />
+        <meta http-equiv="refresh" content="0; URL=/cars/CarList.php/?type=1"/>
     </head>
     <body>
-
+        
     </body>
 </html>
