--- a/cars/dirtracing.html
+++ b/cars/dirtracing.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>redirect...</title>
-        <meta http-equiv="refresh" content="0; URL=/cars/dirtracing.php" />
+        <meta http-equiv="refresh" content="0; URL=/cars/CarList.php/?type=2"/>
     </head>
     <body>
 
