--- a/cars/streetracing.html
+++ b/cars/streetracing.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>redirect...</title>
-        <meta http-equiv="refresh" content="0; URL=/cars/streetracing.php" />
+        <meta http-equiv="refresh" content="0; URL=/cars/CarList.php/?type=5"/>
     </head>
     <body>
 
