--- a/cars/prstunts.html
+++ b/cars/prstunts.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>redirect...</title>
-        <meta http-equiv="refresh" content="0; URL=/cars/prstunts.php" />
+        <meta http-equiv="refresh" content="0; URL=/cars/CarList.php/?type=4"/>
     </head>
     <body>
 
