--- a/cars/roadracing.html
+++ b/cars/roadracing.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>redirect...</title>
-        <meta http-equiv="refresh" content="0; URL=/cars/roadracing.php" />
+        <meta http-equiv="refresh" content="0; URL=/cars/CarList.php/?type=3"/>
     </head>
     <body>
 
